# exam-sim

./: .gitignore  README.md  amplify.yml  app.py  main.py  pyproject.toml
apps/: scraper_app.py
backend/: README.md
backend/adr/: 0001-hosting-platform.md  0002-progress-storage-model.md  README.md
docs/: README.md  backend.md
docs/adr/: 0001-hosting-platform.md  0002-progress-storage-model.md  0003-platform-strategy-supabase-first.md  0004-platform-strategy-aws-first.md  0005-multi-trial-management.md  README.md
examples/: AWS-SAP-C02.questions.json  questions.sample.json
examtopics_helper/: cli.py  db.py  http.py  progress_db.py  question_set.py  scrape.py  scraper_export.py
frontend/: .env.local.example  ENVIRONMENT.md  README.md  package-lock.json
frontend/src/components/: exam-sidebar.tsx  icons.tsx  question-display.tsx  question-set-grid.tsx  question-set-selector.tsx  stats-card.tsx  trial-history-panel.tsx
frontend/src/lib/: awsAuth.ts  progress.ts  questionSet.ts  supabaseClient.ts  trialApi.ts
infra/: .envrc.example  README.md  amplify.tf  api.tf  dynamodb.tf  lambda_me.tf  lambda_progress.tf  lambda_question_sets.tf  main.tf  outputs.tf  s3.tf  variables.tf  versions.tf
infra/lambda/me/: index.js
infra/lambda/progress/: index.py
infra/lambda/question_sets/: index.py
question_set_tools/: README.md  cli.py  db.py  pyproject.toml  question_set.py  scrape.py  scraper_export.py
question_set_tools/question_set_tools/: __init__.py  cli.py  http.py  progress_db.py  scrape.py
web/public/examples/: questions.sample.json
(+18 files in other folders)
