[project]
name = "exam-sim"
version = "0.1.0"
description = "Local-only scraper/convert CLI for building question set JSONs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "requests==2.32.3",
    "tqdm==4.66.6",
]

[project.scripts]
exam-sim-tools = "question_set_tools.cli:main"

